src/main/antlr3/csheets/core/formula/compiler/output/FormulaParser.java
// $ANTLR 3.5.1 D:\\repos\\lapr4-2016-2na\\src\\main\\antlr3\\csheets\\core\\formula\\compiler\\Formula.g 2016-06-22 19:21:33

package csheets.core.formula.compiler;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class FormulaParser extends DebugParser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ABS", "AMP", "ASSIGN", "AT", 
		"CELL_REF", "COLON", "COMMA", "DIGIT", "DIV", "EQ", "EXCL", "FUNCTION", 
		"GLOBAL_VAR", "GT", "GTEQ", "LBRA", "LETTER", "LPAR", "LT", "LTEQ", "MINUS", 
		"MULTI", "NEQ", "NUMBER", "PERCENT", "PLUS", "POWER", "QUOT", "RBRA", 
		"RPAR", "SEMI", "STRING", "TEMP_VAR", "UNDERSCORE", "WHILE", "WS"
	};
	public static final int EOF=-1;
	public static final int ABS=4;
	public static final int AMP=5;
	public static final int ASSIGN=6;
	public static final int AT=7;
	public static final int CELL_REF=8;
	public static final int COLON=9;
	public static final int COMMA=10;
	public static final int DIGIT=11;
	public static final int DIV=12;
	public static final int EQ=13;
	public static final int EXCL=14;
	public static final int FUNCTION=15;
	public static final int GLOBAL_VAR=16;
	public static final int GT=17;
	public static final int GTEQ=18;
	public static final int LBRA=19;
	public static final int LETTER=20;
	public static final int LPAR=21;
	public static final int LT=22;
	public static final int LTEQ=23;
	public static final int MINUS=24;
	public static final int MULTI=25;
	public static final int NEQ=26;
	public static final int NUMBER=27;
	public static final int PERCENT=28;
	public static final int PLUS=29;
	public static final int POWER=30;
	public static final int QUOT=31;
	public static final int RBRA=32;
	public static final int RPAR=33;
	public static final int SEMI=34;
	public static final int STRING=35;
	public static final int TEMP_VAR=36;
	public static final int UNDERSCORE=37;
	public static final int WHILE=38;
	public static final int WS=39;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public static final String[] ruleNames = new String[] {
		"invalidRule", "expression", "operation", "assignment", "arithmetic_highest", 
		"comparison", "reference", "block", "arithmetic_high", "concatenation", 
		"arithmetic_lowest", "atom", "arithmetic_medium", "literal", "arithmetic_low", 
		"function_call"
	};

	public static final boolean[] decisionCanBacktrack = new boolean[] {
		false, // invalid decision
		false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false
	};

 
	public int ruleLevel = 0;
	public int getRuleLevel() { return ruleLevel; }
	public void incRuleLevel() { ruleLevel++; }
	public void decRuleLevel() { ruleLevel--; }
	public FormulaParser(TokenStream input) {
		this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
	}
	public FormulaParser(TokenStream input, int port, RecognizerSharedState state) {
		super(input, state);
		DebugEventSocketProxy proxy =
			new DebugEventSocketProxy(this,port,adaptor);
		setDebugListener(proxy);
		setTokenStream(new DebugTokenStream(input,proxy));
		try {
			proxy.handshake();
		}
		catch (IOException ioe) {
			reportError(ioe);
		}
		TreeAdaptor adap = new CommonTreeAdaptor();
		setTreeAdaptor(adap);
		proxy.setTreeAdaptor(adap);
	}

	public FormulaParser(TokenStream input, DebugEventListener dbg) {
		super(input, dbg);
		 
		TreeAdaptor adap = new CommonTreeAdaptor();
		setTreeAdaptor(adap);

	}

	protected boolean evalPredicate(boolean result, String predicate) {
		dbg.semanticPredicate(result, predicate);
		return result;
	}

		protected DebugTreeAdaptor adaptor;
		public void setTreeAdaptor(TreeAdaptor adaptor) {
			this.adaptor = new DebugTreeAdaptor(dbg,adaptor);
		}
		public TreeAdaptor getTreeAdaptor() {
			return adaptor;
		}
	@Override public String[] getTokenNames() { return FormulaParser.tokenNames; }
	@Override public String getGrammarFileName() { return "D:\\repos\\lapr4-2016-2na\\src\\main\\antlr3\\csheets\\core\\formula\\compiler\\Formula.g"; }


		protected void mismatch(IntStream input, int ttype, BitSet follow)
			throws RecognitionException 
		{
	    	throw new MismatchedTokenException(ttype, input);
		}

		public Object recoverFromMismatchedSet(IntStream input, RecognitionException e, BitSet follow)
			throws RecognitionException 
		{
			throw e; 
		}
		
		@Override
	  	protected Object recoverFromMismatchedToken(IntStream input, int ttype, BitSet follow) throws RecognitionException {
	    	throw new MismatchedTokenException(ttype, input);
	 	}


	public static class expression_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "expression"
	// D:\\repos\\lapr4-2016-2na\\src\\main\\antlr3\\csheets\\core\\formula\\compiler\\Formula.g:45:1: expression : EQ ! operation EOF !;
	public final FormulaParser.expression_return expression() throws RecognitionException {
		FormulaParser.expression_return retval = new FormulaParser.expression_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token EQ1=null;
		Token EOF3=null;
		ParserRuleReturnScope operation2 =null;

		Object EQ1_tree=null;
		Object EOF3_tree=null;

		try { dbg.enterRule(getGrammarFileName(), "expression");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(45, 0);

		try {
			// D:\\repos\\lapr4-2016-2na\\src\\main\\antlr3\\csheets\\core\\formula\\compiler\\Formula.g:46:2: ( EQ ! operation EOF !)
			dbg.enterAlt(1);

			// D:\\repos\\lapr4-2016-2na\\src\\main\\antlr3\\csheets\\core\\formula\\compiler\\Formula.g:46:4: EQ ! operation EOF !
			{
			root_0 = (Object)adaptor.nil();


			dbg.location(46,6);
			EQ1=(Token)match(input,EQ,FOLLOW_EQ_in_expression80); dbg.location(46,8);
			pushFollow(FOLLOW_operation_in_expression83);
			operation2=operation();
			state._fsp--;

			adaptor.addChild(root_0, operation2.getTree());
			dbg.location(46,21);
			EOF3=(Token)match(input,EOF,FOLLOW_EOF_in_expression85); 
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}

			catch (RecognitionException e) {
				reportError(e);
				throw e; 
			}

		finally {
			// do for sure before leaving
		}
		dbg.location(47, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "expression");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "expression"


	public static class operation_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "operation"
	// D:\\repos\\lapr4-2016-2na\\src\\main\\antlr3\\csheets\\core\\formula\\compiler\\Formula.g:49:1: operation : ( assignment | comparison | block );
	public final FormulaParser.operation_return operation() throws RecognitionException {
		FormulaParser.operation_return retval = new FormulaParser.operation_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope assignment4 =null;
		ParserRuleReturnScope comparison5 =null;
		ParserRuleReturnScope block6 =null;


		try { dbg.enterRule(getGrammarFileName(), "operation");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(49, 0);

		try {
			// D:\\repos\\lapr4-2016-2na\\src\\main\\antlr3\\csheets\\core\\formula\\compiler\\Formula.g:50:5: ( assignment | comparison | block )
			int alt1=3;
			try { dbg.enterDecision(1, decisionCanBacktrack[1]);

			switch ( input.LA(1) ) {
			case CELL_REF:
				{
				int LA1_1 = input.LA(2);
				if ( (LA1_1==ASSIGN) ) {
					alt1=1;
				}
				else if ( (LA1_1==EOF||LA1_1==AMP||LA1_1==COLON||(LA1_1 >= DIV && LA1_1 <= EQ)||(LA1_1 >= GT && LA1_1 <= GTEQ)||(LA1_1 >= LT && LA1_1 <= NEQ)||(LA1_1 >= PERCENT && LA1_1 <= POWER)||(LA1_1 >= RBRA && LA1_1 <= SEMI)) ) {
					alt1=2;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 1, 1, input);
						dbg.recognitionException(nvae);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case FUNCTION:
			case LPAR:
			case MINUS:
			case NUMBER:
			case STRING:
			case WHILE:
				{
				alt1=2;
				}
				break;
			case TEMP_VAR:
				{
				int LA1_3 = input.LA(2);
				if ( (LA1_3==ASSIGN) ) {
					alt1=1;
				}
				else if ( (LA1_3==EOF||LA1_3==AMP||(LA1_3 >= DIV && LA1_3 <= EQ)||(LA1_3 >= GT && LA1_3 <= GTEQ)||(LA1_3 >= LT && LA1_3 <= NEQ)||(LA1_3 >= PERCENT && LA1_3 <= POWER)||(LA1_3 >= RBRA && LA1_3 <= SEMI)) ) {
					alt1=2;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 1, 3, input);
						dbg.recognitionException(nvae);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case GLOBAL_VAR:
				{
				int LA1_4 = input.LA(2);
				if ( (LA1_4==ASSIGN) ) {
					alt1=1;
				}
				else if ( (LA1_4==EOF||LA1_4==AMP||(LA1_4 >= DIV && LA1_4 <= EQ)||(LA1_4 >= GT && LA1_4 <= GTEQ)||(LA1_4 >= LT && LA1_4 <= NEQ)||(LA1_4 >= PERCENT && LA1_4 <= POWER)||(LA1_4 >= RBRA && LA1_4 <= SEMI)) ) {
					alt1=2;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 1, 4, input);
						dbg.recognitionException(nvae);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case LBRA:
				{
				alt1=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				dbg.recognitionException(nvae);
				throw nvae;
			}
			} finally {dbg.exitDecision(1);}

			switch (alt1) {
				case 1 :
					dbg.enterAlt(1);

					// D:\\repos\\lapr4-2016-2na\\src\\main\\antlr3\\csheets\\core\\formula\\compiler\\Formula.g:50:7: assignment
					{
					root_0 = (Object)adaptor.nil();


					dbg.location(50,7);
					pushFollow(FOLLOW_assignment_in_operation100);
					assignment4=assignment();
					state._fsp--;

					adaptor.addChild(root_0, assignment4.getTree());

					}
					break;
				case 2 :
					dbg.enterAlt(2);

					// D:\\repos\\lapr4-2016-2na\\src\\main\\antlr3\\csheets\\core\\formula\\compiler\\Formula.g:50:20: comparison
					{
					root_0 = (Object)adaptor.nil();


					dbg.location(50,20);
					pushFollow(FOLLOW_comparison_in_operation104);
					comparison5=comparison();
					state._fsp--;

					adaptor.addChild(root_0, comparison5.getTree());

					}
					break;
				case 3 :
					dbg.enterAlt(3);

					// D:\\repos\\lapr4-2016-2na\\src\\main\\antlr3\\csheets\\core\\formula\\compiler\\Formula.g:50:33: block
					{
					root_0 = (Object)adaptor.nil();


					dbg.location(50,33);
					pushFollow(FOLLOW_block_in_operation108);
					block6=block();
					state._fsp--;

					adaptor.addChild(root_0, block6.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}

			catch (RecognitionException e) {
				reportError(e);
				throw e; 
			}

		finally {
			// do for sure before leaving
		}
		dbg.location(51, 4);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "operation");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "operation"


	public static class block_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "block"
	// D:\\repos\\lapr4-2016-2na\\src\\main\\antlr3\\csheets\\core\\formula\\compiler\\Formula.g:53:1: block : LBRA ^ operation ( SEMI ! operation )+ RBRA !;
	public final FormulaParser.block_return block() throws RecognitionException {
		FormulaParser.block_return retval = new FormulaParser.block_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token LBRA7=null;
		Token SEMI9=null;
		Token RBRA11=null;
		ParserRuleReturnScope operation8 =null;
		ParserRuleReturnScope operation10 =null;

		Object LBRA7_tree=null;
		Object SEMI9_tree=null;
		Object RBRA11_tree=null;

		try { dbg.enterRule(getGrammarFileName(), "block");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(53, 0);

		try {
			// D:\\repos\\lapr4-2016-2na\\src\\main\\antlr3\\csheets\\core\\formula\\compiler\\Formula.g:54:2: ( LBRA ^ operation ( SEMI ! operation )+ RBRA !)
			dbg.enterAlt(1);

			// D:\\repos\\lapr4-2016-2na\\src\\main\\antlr3\\csheets\\core\\formula\\compiler\\Formula.g:54:4: LBRA ^ operation ( SEMI ! operation )+ RBRA !
			{
			root_0 = (Object)adaptor.nil();


			dbg.location(54,8);
			LBRA7=(Token)match(input,LBRA,FOLLOW_LBRA_in_block122); 
			LBRA7_tree = (Object)adaptor.create(LBRA7);
			root_0 = (Object)adaptor.becomeRoot(LBRA7_tree, root_0);
			dbg.location(54,10);
			pushFollow(FOLLOW_operation_in_block125);
			operation8=operation();
			state._fsp--;

			adaptor.addChild(root_0, operation8.getTree());
			dbg.location(54,20);
			// D:\\repos\\lapr4-2016-2na\\src\\main\\antlr3\\csheets\\core\\formula\\compiler\\Formula.g:54:20: ( SEMI ! operation )+
			int cnt2=0;
			try { dbg.enterSubRule(2);

			loop2:
			while (true) {
				int alt2=2;
				try { dbg.enterDecision(2, decisionCanBacktrack[2]);

				int LA2_0 = input.LA(1);
				if ( (LA2_0==SEMI) ) {
					alt2=1;
				}

				} finally {dbg.exitDecision(2);}

				switch (alt2) {
				case 1 :
					dbg.enterAlt(1);

					// D:\\repos\\lapr4-2016-2na\\src\\main\\antlr3\\csheets\\core\\formula\\compiler\\Formula.g:54:21: SEMI ! operation
					{
					dbg.location(54,25);
					SEMI9=(Token)match(input,SEMI,FOLLOW_SEMI_in_block128); dbg.location(54,27);
					pushFollow(FOLLOW_operation_in_block131);
					operation10=operation();
					state._fsp--;

					adaptor.addChild(root_0, operation10.getTree());

					}
					break;

				default :
					if ( cnt2 >= 1 ) break loop2;
					EarlyExitException eee = new EarlyExitException(2, input);
					dbg.recognitionException(eee);

					throw eee;
				}
				cnt2++;
			}
			} finally {dbg.exitSubRule(2);}
			dbg.location(54,44);
			RBRA11=(Token)match(input,RBRA,FOLLOW_RBRA_in_block136); 
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}

			catch (RecognitionException e) {
				reportError(e);
				throw e; 
			}

		finally {
			// do for sure before leaving
		}
		dbg.location(55, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "block");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "block"


	public static class assignment_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "assignment"
	// D:\\repos\\lapr4-2016-2na\\src\\main\\antlr3\\csheets\\core\\formula\\compiler\\Formula.g:57:1: assignment : ( CELL_REF | TEMP_VAR | GLOBAL_VAR ) ASSIGN ^ comparison ;
	public final FormulaParser.assignment_return assignment() throws RecognitionException {
		FormulaParser.assignment_return retval = new FormulaParser.assignment_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token set12=null;
		Token ASSIGN13=null;
		ParserRuleReturnScope comparison14 =null;

		Object set12_tree=null;
		Object ASSIGN13_tree=null;

		try { dbg.enterRule(getGrammarFileName(), "assignment");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(57, 0);

		try {
			// D:\\repos\\lapr4-2016-2na\\src\\main\\antlr3\\csheets\\core\\formula\\compiler\\Formula.g:58:9: ( ( CELL_REF | TEMP_VAR | GLOBAL_VAR ) ASSIGN ^ comparison )
			dbg.enterAlt(1);

			// D:\\repos\\lapr4-2016-2na\\src\\main\\antlr3\\csheets\\core\\formula\\compiler\\Formula.g:58:11: ( CELL_REF | TEMP_VAR | GLOBAL_VAR ) ASSIGN ^ comparison
			{
			root_0 = (Object)adaptor.nil();


			dbg.location(58,11);
			set12=input.LT(1);
			if ( input.LA(1)==CELL_REF||input.LA(1)==GLOBAL_VAR||input.LA(1)==TEMP_VAR ) {
				input.consume();
				adaptor.addChild(root_0, (Object)adaptor.create(set12));
				state.errorRecovery=false;
			}
			else {
				MismatchedSetException mse = new MismatchedSetException(null,input);
				dbg.recognitionException(mse);
				throw mse;
			}dbg.location(58,52);
			ASSIGN13=(Token)match(input,ASSIGN,FOLLOW_ASSIGN_in_assignment167); 
			ASSIGN13_tree = (Object)adaptor.create(ASSIGN13);
			root_0 = (Object)adaptor.becomeRoot(ASSIGN13_tree, root_0);
			dbg.location(58,54);
			pushFollow(FOLLOW_comparison_in_assignment170);
			comparison14=comparison();
			state._fsp--;

			adaptor.addChild(root_0, comparison14.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}

			catch (RecognitionException e) {
				reportError(e);
				throw e; 
			}

		finally {
			// do for sure before leaving
		}
		dbg.location(59, 8);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "assignment");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "assignment"


	public static class comparison_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "comparison"
	// D:\\repos\\lapr4-2016-2na\\src\\main\\antlr3\\csheets\\core\\formula\\compiler\\Formula.g:61:1: comparison : concatenation ( ( EQ ^| NEQ ^| GT ^| LT ^| LTEQ ^| GTEQ ^) concatenation )? ;
	public final FormulaParser.comparison_return comparison() throws RecognitionException {
		FormulaParser.comparison_return retval = new FormulaParser.comparison_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token EQ16=null;
		Token NEQ17=null;
		Token GT18=null;
		Token LT19=null;
		Token LTEQ20=null;
		Token GTEQ21=null;
		ParserRuleReturnScope concatenation15 =null;
		ParserRuleReturnScope concatenation22 =null;

		Object EQ16_tree=null;
		Object NEQ17_tree=null;
		Object GT18_tree=null;
		Object LT19_tree=null;
		Object LTEQ20_tree=null;
		Object GTEQ21_tree=null;

		try { dbg.enterRule(getGrammarFileName(), "comparison");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(61, 0);

		try {
			// D:\\repos\\lapr4-2016-2na\\src\\main\\antlr3\\csheets\\core\\formula\\compiler\\Formula.g:62:2: ( concatenation ( ( EQ ^| NEQ ^| GT ^| LT ^| LTEQ ^| GTEQ ^) concatenation )? )
			dbg.enterAlt(1);

			// D:\\repos\\lapr4-2016-2na\\src\\main\\antlr3\\csheets\\core\\formula\\compiler\\Formula.g:62:4: concatenation ( ( EQ ^| NEQ ^| GT ^| LT ^| LTEQ ^| GTEQ ^) concatenation )?
			{
			root_0 = (Object)adaptor.nil();


			dbg.location(62,4);
			pushFollow(FOLLOW_concatenation_in_comparison188);
			concatenation15=concatenation();
			state._fsp--;

			adaptor.addChild(root_0, concatenation15.getTree());
			dbg.location(63,3);
			// D:\\repos\\lapr4-2016-2na\\src\\main\\antlr3\\csheets\\core\\formula\\compiler\\Formula.g:63:3: ( ( EQ ^| NEQ ^| GT ^| LT ^| LTEQ ^| GTEQ ^) concatenation )?
			int alt4=2;
			try { dbg.enterSubRule(4);
			try { dbg.enterDecision(4, decisionCanBacktrack[4]);

			int LA4_0 = input.LA(1);
			if ( (LA4_0==EQ||(LA4_0 >= GT && LA4_0 <= GTEQ)||(LA4_0 >= LT && LA4_0 <= LTEQ)||LA4_0==NEQ) ) {
				alt4=1;
			}
			} finally {dbg.exitDecision(4);}

			switch (alt4) {
				case 1 :
					dbg.enterAlt(1);

					// D:\\repos\\lapr4-2016-2na\\src\\main\\antlr3\\csheets\\core\\formula\\compiler\\Formula.g:63:5: ( EQ ^| NEQ ^| GT ^| LT ^| LTEQ ^| GTEQ ^) concatenation
					{
					dbg.location(63,5);
					// D:\\repos\\lapr4-2016-2na\\src\\main\\antlr3\\csheets\\core\\formula\\compiler\\Formula.g:63:5: ( EQ ^| NEQ ^| GT ^| LT ^| LTEQ ^| GTEQ ^)
					int alt3=6;
					try { dbg.enterSubRule(3);
					try { dbg.enterDecision(3, decisionCanBacktrack[3]);

					switch ( input.LA(1) ) {
					case EQ:
						{
						alt3=1;
						}
						break;
					case NEQ:
						{
						alt3=2;
						}
						break;
					case GT:
						{
						alt3=3;
						}
						break;
					case LT:
						{
						alt3=4;
						}
						break;
					case LTEQ:
						{
						alt3=5;
						}
						break;
					case GTEQ:
						{
						alt3=6;
						}
						break;
					default:
						NoViableAltException nvae =
							new NoViableAltException("", 3, 0, input);
						dbg.recognitionException(nvae);
						throw nvae;
					}
					} finally {dbg.exitDecision(3);}

					switch (alt3) {
						case 1 :
							dbg.enterAlt(1);

							// D:\\repos\\lapr4-2016-2na\\src\\main\\antlr3\\csheets\\core\\formula\\compiler\\Formula.g:63:7: EQ ^
							{
							dbg.location(63,9);
							EQ16=(Token)match(input,EQ,FOLLOW_EQ_in_comparison196); 
							EQ16_tree = (Object)adaptor.create(EQ16);
							root_0 = (Object)adaptor.becomeRoot(EQ16_tree, root_0);

							}
							break;
						case 2 :
							dbg.enterAlt(2);

							// D:\\repos\\lapr4-2016-2na\\src\\main\\antlr3\\csheets\\core\\formula\\compiler\\Formula.g:63:13: NEQ ^
							{
							dbg.location(63,16);
							NEQ17=(Token)match(input,NEQ,FOLLOW_NEQ_in_comparison201); 
							NEQ17_tree = (Object)adaptor.create(NEQ17);
							root_0 = (Object)adaptor.becomeRoot(NEQ17_tree, root_0);

							}
							break;
						case 3 :
							dbg.enterAlt(3);

							// D:\\repos\\lapr4-2016-2na\\src\\main\\antlr3\\csheets\\core\\formula\\compiler\\Formula.g:63:20: GT ^
							{
							dbg.location(63,22);
							GT18=(Token)match(input,GT,FOLLOW_GT_in_comparison206); 
							GT18_tree = (Object)adaptor.create(GT18);
							root_0 = (Object)adaptor.becomeRoot(GT18_tree, root_0);

							}
							break;
						case 4 :
							dbg.enterAlt(4);

							// D:\\repos\\lapr4-2016-2na\\src\\main\\antlr3\\csheets\\core\\formula\\compiler\\Formula.g:63:26: LT ^
							{
							dbg.location(63,28);
							LT19=(Token)match(input,LT,FOLLOW_LT_in_comparison211); 
							LT19_tree = (Object)adaptor.create(LT19);
							root_0 = (Object)adaptor.becomeRoot(LT19_tree, root_0);

							}
							break;
						case 5 :
							dbg.enterAlt(5);

							// D:\\repos\\lapr4-2016-2na\\src\\main\\antlr3\\csheets\\core\\formula\\compiler\\Formula.g:63:32: LTEQ ^
							{
							dbg.location(63,36);
							LTEQ20=(Token)match(input,LTEQ,FOLLOW_LTEQ_in_comparison216); 
							LTEQ20_tree = (Object)adaptor.create(LTEQ20);
							root_0 = (Object)adaptor.becomeRoot(LTEQ20_tree, root_0);

							}
							break;
						case 6 :
							dbg.enterAlt(6);

							// D:\\repos\\lapr4-2016-2na\\src\\main\\antlr3\\csheets\\core\\formula\\compiler\\Formula.g:63:40: GTEQ ^
							{
							dbg.location(63,44);
							GTEQ21=(Token)match(input,GTEQ,FOLLOW_GTEQ_in_comparison221); 
							GTEQ21_tree = (Object)adaptor.create(GTEQ21);
							root_0 = (Object)adaptor.becomeRoot(GTEQ21_tree, root_0);

							}
							break;

					}
					} finally {dbg.exitSubRule(3);}
					dbg.location(63,48);
					pushFollow(FOLLOW_concatenation_in_comparison226);
					concatenation22=concatenation();
					state._fsp--;

					adaptor.addChild(root_0, concatenation22.getTree());

					}
					break;

			}
			} finally {dbg.exitSubRule(4);}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}

			catch (RecognitionException e) {
				reportError(e);
				throw e; 
			}

		finally {
			// do for sure before leaving
		}
		dbg.location(64, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "comparison");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "comparison"


	public static class concatenation_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "concatenation"
	// D:\\repos\\lapr4-2016-2na\\src\\main\\antlr3\\csheets\\core\\formula\\compiler\\Formula.g:66:1: concatenation : arithmetic_lowest ( AMP ^ arithmetic_lowest )* ;
	public final FormulaParser.concatenation_return concatenation() throws RecognitionException {
		FormulaParser.concatenation_return retval = new FormulaParser.concatenation_return();
		retval.start = input.LT(1);

		Object root_0 = null;
